--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon --watch . ./bin/www"
+    "dev": "nodemon --watch . ./bin/www",
+    "test": "jest"
   },
   "dependencies": {
     "axios": "^0.23.0",
@@ -17,5 +18,10 @@
     "memory-cache": "^0.2.0",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.14"
+  },
+  "devDependencies": {
+    "jest": "^27.3.1",
+    "jest-node-exports-resolver": "^1.1.2",
+    "supertest": "^6.1.6"
   }
 }
