--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
+    "express-rate-limit": "^6.4.0",
     "firebase-admin": "^10.0.0",
     "memory-cache": "^0.2.0",
     "morgan": "~1.9.1",
